# atmega-xmas-star

./: README.md
doc/: .gitattributes
src/: .gitignore  CMakeLists.txt  Makefile  gpio.c  gpio.h  main.c  patterns.h  timer.c  timer.h
